# stm32_temp

./: CMakeLists.txt  path_helper.ps1
cmake/: FindCMSIS.cmake
src/: main.cpp  main.h
